force-app/main/default/objects/OpportunitySplit/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <formula>CreatedBy.FirstName &amp;&apos; &apos;&amp; CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By</label>
    <type>Text</type>
</CustomField>