force-app/main/default/objects/OpportunitySplit/fields/Opportunity_Split_Division__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Split_Division__c</fullName>
    <label>Opportunity Split Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>