force-app/main/default/objects/OpportunitySplit/fields/YoY_Sub_Division__c.field-meta.xml
<CustomField>
    <fullName>YoY_Sub_Division__c</fullName>
    <label>YoY Sub Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>